--- a/user-service/user-service/pom.xml
+++ b/user-service/user-service/pom.xml
@@ -53,6 +53,16 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>3.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>4.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
